--- a/style.css
+++ b/style.css
@@ -6,15 +6,17 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     list-style-type: none;
     text-decoration: none;
+
  
 }
 .body1
 {
     background-color: #1f2937;
-    
+    padding-bottom: 100px;
 }
 .heading
 {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 24px;
     color: #F9fAf8;
     font-weight: bolder;
@@ -73,7 +75,7 @@ button
     font-weight: 500;
     padding: 7px 35px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    /* margin-bottom: 100px; */
+    
 
 }
 #buton1
@@ -86,11 +88,7 @@ button
     margin-left: 700px;
     margin-top: -250px;
   }
-#space
-{
-    margin-top: 120px;
-    visibility: hidden;
-}
+
 .head1
 {
     margin-top: 35px;
@@ -133,6 +131,7 @@ button
 .body3
 {
     background-color: #e5e7eb;
+   margin-bottom: 100px;
 }
 #space1
 {
@@ -150,6 +149,10 @@ button
        margin-left:  325px;
 
 }
+.body2
+{
+    margin-bottom: 100px;   
+}
 #kratos
 {
     margin-left: 500px;
@@ -164,7 +167,7 @@ button
     color: white;
     margin-left: 200px;
     margin-right: 200px;
-
+    margin-bottom: 100px;
 }
 #call
 {
